force-app/main/default/objects/Scholarship__c/fields/Student1__c.field-meta.xml
<CustomField>
    <fullName>Student1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student1</label>
    <referenceTo>Student1__c</referenceTo>
    <relationshipLabel>Scholarships</relationshipLabel>
    <relationshipName>Scholarships</relationshipName>
    <type>Lookup</type>
</CustomField>