force-app/main/default/objects/Scholarship__c/validationRules/Approved_Date_cannot_be_before_Applied_D.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Date_cannot_be_before_Applied_D</fullName>
    <active>true</active>
    <errorConditionFormula>Approved_Date__c &lt; Applied_Date__c</errorConditionFormula>
    <errorMessage>Approved Date cannot be before Applied Date.</errorMessage>
</ValidationRule>