force-app/main/default/objects/Scholarship__c/validationRules/Approved_Date_required_if_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Date_required_if_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Approval_Status__c,&quot;Approved&quot;),
ISBLANK(Approved_Date__c)
)</errorConditionFormula>
    <errorMessage>Enter Approved Date.</errorMessage>
</ValidationRule>