force-app/main/default/objects/Scholarship__c/validationRules/Percentage_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Percentage__c &lt; 0</errorConditionFormula>
    <errorMessage>Percentage cannot be negative.</errorMessage>
</ValidationRule>