force-app/main/default/objects/Scholarship__c/validationRules/Percentage_cannot_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_cannot_exceed_100</fullName>
    <active>true</active>
    <errorConditionFormula>Percentage__c &gt; 100</errorConditionFormula>
    <errorMessage>Scholarship percentage cannot exceed 100.</errorMessage>
</ValidationRule>